# CLIP_tensorrt

./: CMakeLists.txt  README.md
include/common/: argsParser.h  buffers.h
include/my_demo/clip/: clip.h
include/my_demo/preprocess/: clip_tokenizer.h  preprocess.h
src/: CMakeLists.txt  main.cpp
src/clip/: CMakeLists.txt  clip_base.cpp  clip_text.cpp  clip_vision.cpp
src/preprocess/: CMakeLists.txt  clip_tokenizer.cpp  preprocess.cpp  preprocess.cu
